test(Tap-7216): add unit test case